# orbiter

./: .clang-format  .editorconfig  .gitignore  .gitmodules  .vsconfig  Albedo.mkr  Base.h  Body.h  BodyIntegrator.cpp  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  COMPILE.md  CSphereMgr.h  Camera.cpp  Camera.h  Catena.mkr  Client.cpp  Config.cpp  Craters.mkr  D3D9Client.cfg  D3d7enum.h  D3d7frame.cpp  D3d7frame.h  D3d7util.cpp  D3d7util.h  D3denum.cpp  D3denum.h  D3dframe.cpp  D3dframe.h  D3dmath.cpp  DialogWin.h  Disclaimer.txt  Disclaimer.txt.in  DlgCamera.cpp  DlgCamera.h  DlgFocus.cpp  DlgFunction.cpp  DlgFunction.h  DlgInfo.h  (+121 more)
Doc/: .~lock.Orbiter.odt#  2006 Edition log.txt  Atlantis.doc  Atlantis.odt  CMakeLists.txt  Change.doc  Credit.doc  D3D9Client.doc  DeltaGlider.doc  DeltaGlider.odt  MainDoc.vcxproj  MainDoc.vcxproj.filters  OrbiterConfig.doc  OrbiterConfig.odt  PlanetTextures.odt  ScenarioEditor.doc  ShuttleA.doc  common_definitions.tex  make.bat
Doc/Atlantis/: Atlantis.tex
Doc/Orbiter Developer Manual/: CMakeLists.txt  CONFIG.tex  FLOW.tex  GRAPHICS_CLIENT.tex  INTRODUCTION.tex  KEYMAP.tex  MESH.tex  NEW_SPACECRAFT.tex  ORBITS.tex  Orbiter Developer Manual.tex  PLANETS.tex  PUBLISH.tex  REFERENCES.bib  REFERENCES.tex  SCENARIO.tex  SCN_EDITOR.tex  SOURCES.tex  SPACECRAFT.tex  SURFACES.tex  VESSEL_CFG.tex
Doc/Orbiter Technical Reference/: CMakeLists.txt  INTRODUCTION.tex  Orbiter Technical Reference.tex  REFERENCES.bib  RecorderRef.tex  composite.tex  corr_effect.eps  dens_relerr.eps  distmass.tex  dynamics.tex  dynsurf.tex  earth_atm.tex  errordiff.eps  exotemp1.eps  exotemp2.eps  fig2.eps  fig3a.eps  fig3b.eps  gravity.tex  j71g_nrlmsise00_cmp1.eps  j71g_nrlmsise00_cmp2.eps  j71g_nrlmsise00_cmp3.eps  jacchia_temp.eps  legacy_dns.eps  legacy_temp.eps  lighting.tex  molmass.eps  molmass_err.eps  ob_j71g_dens.eps  ob_j71g_prs.eps  ob_j71g_temp.eps  pea_symp_std.eps  position_error.eps  precession.tex  prs_j77.eps  radial_error.eps  sma_dev.eps  sma_std.eps  sma_symp_std.eps  sphere.eps  (+2 more)
Doc/Orbiter User Manual/: ADVANCED_CFG.tex  Atlantis.tex  BASIC_FLIGHT.tex  CALC_ORB.tex  CAMERA.tex  CHECKLISTS.tex  CLI.tex  CMakeLists.txt  COCKPIT.tex  CONTROLS.tex  CREDITS.tex  DEMO.tex  EXTRA.tex  FLIGHT_RECORDER.tex  GLOSSARY.tex  HELP.tex  INSTALLATION.tex  INTRODUCTION.tex  JOYSTICK.tex  KEYBOARD.tex  LAUNCHPAD.tex  LICENSE.tex  MENU.tex  MFD.tex  MFD_REFERENCE.tex  MOUSE.tex  NEW.tex  OBJECT.tex  ORBITS.tex  Orbiter User Manual.tex  QUICKSTART.tex  RADIO.tex  REFERENCES.bib  SCRIPT.tex  SOL.tex  SOL_REFS.tex  SPACECRAFT.tex  TERMS.tex  USER_INTERFACE.tex  VISUAL.tex
Doc/Technotes/: CMakeLists.txt  RecorderRef.doc
Doc/TransX/: TransX readme.txt
Html/Scenarios/: CMakeLists.txt  CurrentState.htm  CurrentState_img.htm
OVP/D3D7Client/: CMakeLists.txt  CSphereMgr.cpp  CSphereMgr.h  Camera.cpp  Camera.h  CelSphere.cpp  CelSphere.h  CloudMgr.cpp  CloudMgr.h  D3D7Client.cpp  D3D7Client.h  D3D7Client.rc  D3D7Client.sln  D3D7Client.vcproj  D3D7Client.vcxproj  D3D7Client.vcxproj.filters  D3D7Config.cpp  D3D7Config.h  D3D7Enum.cpp  D3D7Enum.h  D3D7Extra.cpp  D3D7Extra.h  D3D7Frame.cpp  D3D7Frame.h  D3D7Util.cpp  D3D7Util.h  HazeMgr.cpp  HazeMgr.h  Light.cpp  Light.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  MeshMgr.cpp  MeshMgr.h  Particle.cpp  Particle.h  RingMgr.cpp  RingMgr.h  (+35 more)
OVP/D3D9Client/: AABBUtil.cpp  AABBUtil.h  AtmoControls.cpp  AtmoControls.h  BeaconArray.cpp  BeaconArray.h  CMakeLists.txt  CSphereMgr.cpp  CSphereMgr.h  CelSphere.cpp  CelSphere.h  CloudMgr.cpp  CloudMgr.h  Cloudmgr2.cpp  Cloudmgr2.h  D3D9Catalog.h  D3D9Client.cpp  D3D9Client.h  D3D9Client.info  D3D9Client.rc  D3D9ClientConfig.h.in  D3D9Config.cpp  D3D9Config.h  D3D9ControlPanel.cpp  D3D9Effect.cpp  D3D9Effect.h  D3D9Frame.cpp  D3D9Frame.h  D3D9Pad.cpp  D3D9Pad.h  D3D9Pad2.cpp  D3D9Pad3.cpp  D3D9Surface.cpp  D3D9Surface.h  D3D9TextMgr.cpp  D3D9TextMgr.h  D3D9Util.cpp  D3D9Util.h  DebugControls.cpp  DebugControls.h  (+66 more)
OVP/GDIClient/: CMakeLists.txt  GDIClient.cpp  GDIClient.h  GDIClient.sln  GDIClient.vcxproj  GDIClient.vcxproj.filters
OVP/VulkanClient/: .editorconfig  AABBUtil.cpp  AABBUtil.h  AtmoControls.cpp  BeaconArray.cpp  BeaconArray.h  CMakeLists.txt  CSphereMgr.cpp  CSphereMgr.h  Catalog.h  CelSphere.cpp  CelSphere.h  Client.cpp  Client.h  Client.rc  CloudMgr.cpp  CloudMgr.h  Cloudmgr2.cpp  Cloudmgr2.h  Config.cpp  Config.h  ControlPanel.cpp  DebugControls.cpp  DebugControls.h  Effect.cpp  Effect.h  Frame.cpp  Frame.h  GDIPad.cpp  GDIPad.h  HazeMgr.cpp  HazeMgr.h  IProcess.cpp  IProcess.h  Junction.cpp  Log.cpp  Log.h  MaterialMgr.cpp  MaterialMgr.h  Mesh.cpp  (+60 more)
Orbitersdk/: CMakeLists.txt
Orbitersdk/D3D9Client/: .editorconfig  AABBUtil.cpp  AABBUtil.h  AtmoControls.cpp  AtmoControls.h  BeaconArray.cpp  BeaconArray.h  CMakeLists.txt  CSphereMgr.cpp  CSphereMgr.h  CelSphere.cpp  CelSphere.h  CloudMgr.cpp  CloudMgr.h  Cloudmgr2.cpp  Cloudmgr2.h  D3D9Catalog.cpp  D3D9Catalog.h  D3D9Client.cpp  D3D9Client.h  D3D9Client.rc  D3D9Client.rtf  D3D9Client.sln  D3D9Client.vcproj  D3D9Client.vcxproj  D3D9Client.vcxproj.filters  D3D9ClientConfig.h.in  D3D9ClientVS2008.sln  D3D9ClientVS2008.vcproj  D3D9ClientVS2010.sln  D3D9ClientVS2010.vcxproj  D3D9ClientVS2010.vcxproj.filters  D3D9ClientVS2012.sln  D3D9ClientVS2012.vcxproj  D3D9ClientVS2012.vcxproj.filters  D3D9ClientVS2015.sln  D3D9ClientVS2015.vcxproj  D3D9ClientVS2015.vcxproj.filters  D3D9ClientVS2017.sln  D3D9ClientVS2017.vcxproj  (+102 more)
Orbitersdk/debug_libs/: DlgCtrld.lib  Orbiterd.lib  Orbitersdkd.lib
Orbitersdk/doc/: 3DModel.doc  API_Guide.doc  BuildingSamples.tex  CMakeLists.txt  SdkDoc.vcxproj  SdkDoc.vcxproj.filters  gcAPI.chm
Orbitersdk/doxygen/: CMakeLists.txt  Doxyfile  Doxyfile.in  doxy.bat  (+3 more)
Script/: CMakeLists.txt  attctrl.lua  earthview2016.lua  ksc_sweep.lua  oapi_init.lua  proc.lua  solsys2016.fr_FR.po  solsys2016.lua  solsys2016.pot  strict.lua  welcome2016.lua
Src/: CMakeLists.txt
Tests/: CMakeLists.txt  Lua.Interpreter.cpp  README.md  t_lua_interpreter.cc
Utils/: CMakeLists.txt  dat2pot.lua  report_i18n.lua  xgettext.lua
(+3715 files in other folders)
